# valda

./: .gitignore  LICENSE.rst  README.md  _config.xml  pyproject.toml  requirements.txt
docs/: _config.xml  index.md
src/valda/: beta_shapley.py  cs_shapley.py  eval.py  inf_func.py  loo.py  metrics.py  params.py  pyclassifier.py  tmc_shapley.py  util.py  valuation.py
tests/data/: diabetes.pkl
tests/example/: simple.py  simple_pytorch.py
